Add blog again and fix link page

--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
 #
 layout: home
 ---
+
+<script async src="https://cse.google.com/cse.js?cx=75fa43da6e1124b21">
+</script>
+<div class="gcse-search"></div>
