--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ layout: home
 
 <script async src="https://cse.google.com/cse.js?cx=75fa43da6e1124b21">
 </script>
-<div class="gcse-search"></div>
+<div class="gcse-searchbox-only"></div>
