--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 layout: home
 ---
 
-<script async src="https://cse.google.com/cse.js?cx=75fa43da6e1124b21">
-</script>
-<div class="gcse-searchbox-only"></div>
+<form action=https://www.google.fr/search name=f>
+    <input class="search-input" maxlength=2048 name=q value="" title="Google" autocomplete="off" placeholder="Lycos, go get it !" autofocus>
+</form>
